@@ -5,7 +5,7 @@ message (STATUS "Subproject ${SUBPROJECT}")
 # set directories
 set (SUBPROJECT_BINARY_DIR bin)
 set (SUBPROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-set (SUBPROJECT_RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
+set (SUBPROJECT_RESOURCE_DIR ${PROJECT_RESOURCE_DIR})
 set (SUBPROJECT_TRANSLATION_DIR ${SUBPROJECT_RESOURCE_DIR}/translations)
 # executable path
 set (EXECUTABLE_OUTPUT_PATH ${SUBPROJECT_BINARY_DIR})
