@@ -1,6 +1,0 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-  <file>translations/english.qm</file>
-  <file>translations/russian.qm</file>
-</qresource>
-</RCC> 
